2009-11-03  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson and Beth Dakin.

        https://bugs.webkit.org/show_bug.cgi?id=31070

        Added an 'ondestroy' parameter to the test plug-in. When the plug-in is
        destroyed, it executes the value of the 'ondestroy' parameter as a
        script.

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginAllocate): Initialize onDestroy.
        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.h: Define
        onDestroy.
        * DumpRenderTree/TestNetscapePlugIn.subproj/main.cpp:
        (NPP_New): Set onDestroy to the value of the 'ondestroy' parameter, if
        specified.
        (NPP_Destroy): Execute the value of 'ondestroy' as a script.

2009-11-02  Joanmarie Diggs  <joanmarie.diggs@gmail.com>

        Reviewed by Xan Lopez.

        https://bugs.webkit.org/show_bug.cgi?id=31035
        [GTK] some accessibility tests hitting assertion in debug builds

        Get the correct Gtk+ object before attempting to turn it into an AtkObject.

        * DumpRenderTree/gtk/AccessibilityControllerGtk.cpp:
        (AccessibilityController::rootElement):

2009-11-02  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        Support ARIA "tab" roles
        https://bugs.webkit.org/show_bug.cgi?id=30842

        * DumpRenderTree/AccessibilityUIElement.cpp:
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:

2009-11-01  Eric Seidel  <eric@webkit.org>

        Reviewed by David Levin.

        buildbots should use --exit-after-N-failures
        https://bugs.webkit.org/show_bug.cgi?id=30809

        Make the bots exit after 20 failures to prevent never-ending
        test runs where every test spends a minute crashing.
